--- a/Proyecto05ciclo.csproj
+++ b/Proyecto05ciclo.csproj
@@ -524,6 +524,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Login\Registrarse.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -534,7 +535,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Imagenes\Producto\" />
-    <Folder Include="Views\Home\" />
     <Folder Include="Views\Tienda\" />
   </ItemGroup>
   <ItemGroup>
