Agregado Marca Logica y Metodos del Home controller para enviar Json

--- a/Proyecto05ciclo.csproj
+++ b/Proyecto05ciclo.csproj
@@ -471,6 +471,7 @@
     </Compile>
     <Compile Include="Logica\CategoriaLogica.cs" />
     <Compile Include="Logica\Conexion.cs" />
+    <Compile Include="Logica\MarcaLogica.cs" />
     <Compile Include="Logica\UsuarioLogica.cs" />
     <Compile Include="Models\Carrito.cs" />
     <Compile Include="Models\Categoria.cs" />
