--- a/Proyecto05ciclo.csproj
+++ b/Proyecto05ciclo.csproj
@@ -280,6 +280,35 @@
     <Content Include="Imagenes\Login\1.jpg" />
     <Content Include="Imagenes\Login\2.jpg" />
     <Content Include="Imagenes\Login\Logo.svg" />
+    <Content Include="Imagenes\Productos\1.jpg" />
+    <Content Include="Imagenes\Productos\10.jpg" />
+    <Content Include="Imagenes\Productos\11.jpg" />
+    <Content Include="Imagenes\Productos\12.jpg" />
+    <Content Include="Imagenes\Productos\13.jpg" />
+    <Content Include="Imagenes\Productos\14.jpg" />
+    <Content Include="Imagenes\Productos\15.jpg" />
+    <Content Include="Imagenes\Productos\16.jpg" />
+    <Content Include="Imagenes\Productos\17.jpg" />
+    <Content Include="Imagenes\Productos\18.jpg" />
+    <Content Include="Imagenes\Productos\19.jpg" />
+    <Content Include="Imagenes\Productos\2.jpg" />
+    <Content Include="Imagenes\Productos\20.jpg" />
+    <Content Include="Imagenes\Productos\21.jpg" />
+    <Content Include="Imagenes\Productos\22.jpg" />
+    <Content Include="Imagenes\Productos\23.jpg" />
+    <Content Include="Imagenes\Productos\24.jpg" />
+    <Content Include="Imagenes\Productos\25.jpg" />
+    <Content Include="Imagenes\Productos\26.jpg" />
+    <Content Include="Imagenes\Productos\28.png" />
+    <Content Include="Imagenes\Productos\29.png" />
+    <Content Include="Imagenes\Productos\3.jpg" />
+    <Content Include="Imagenes\Productos\30.jpg" />
+    <Content Include="Imagenes\Productos\4.jpg" />
+    <Content Include="Imagenes\Productos\5.jpg" />
+    <Content Include="Imagenes\Productos\6.jpg" />
+    <Content Include="Imagenes\Productos\7.jpg" />
+    <Content Include="Imagenes\Productos\8.jpg" />
+    <Content Include="Imagenes\Productos\9.jpg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -529,6 +558,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Login\Registrarse.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Categoria.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -538,7 +568,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Imagenes\Productos\" />
     <Folder Include="Views\Tienda\" />
   </ItemGroup>
   <ItemGroup>
