Debugging y ajax de HomeController terminado

--- a/Proyecto05ciclo.csproj
+++ b/Proyecto05ciclo.csproj
@@ -559,6 +559,8 @@
     <Content Include="Views\Login\Registrarse.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Categoria.cshtml" />
+    <Content Include="Views\Home\Marca.cshtml" />
+    <Content Include="Views\Home\Producto.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
