Solucionado error Max Json Length

--- a/Proyecto05ciclo.csproj
+++ b/Proyecto05ciclo.csproj
@@ -1951,7 +1951,10 @@
     <Content Include="Imagenes\Productos\24.jpg" />
     <Content Include="Imagenes\Productos\25.jpg" />
     <Content Include="Imagenes\Productos\26.jpg" />
+    <Content Include="Imagenes\Productos\27.jpg" />
+    <Content Include="Imagenes\Productos\28.jpg" />
     <Content Include="Imagenes\Productos\28.png" />
+    <Content Include="Imagenes\Productos\29.jpg" />
     <Content Include="Imagenes\Productos\29.png" />
     <Content Include="Imagenes\Productos\3.jpg" />
     <Content Include="Imagenes\Productos\30.jpg" />
