--- a/Proyecto05ciclo.csproj
+++ b/Proyecto05ciclo.csproj
@@ -1931,7 +1931,7 @@
     <Content Include="Global.asax" />
     <Content Include="Imagenes\Login\1.jpg" />
     <Content Include="Imagenes\Login\2.jpg" />
-    <Content Include="Imagenes\Login\Logo.svg" />
+    <Content Include="Imagenes\Login\gametec.png" />
     <Content Include="Imagenes\Productos\1.jpg" />
     <Content Include="Imagenes\Productos\10.jpg" />
     <Content Include="Imagenes\Productos\11.jpg" />
