--- a/Proyecto05ciclo.csproj
+++ b/Proyecto05ciclo.csproj
@@ -1932,6 +1932,7 @@
     <Content Include="Imagenes\Login\1.jpg" />
     <Content Include="Imagenes\Login\2.jpg" />
     <Content Include="Imagenes\Login\gametec.png" />
+    <Content Include="Imagenes\Login\gametecanimado.gif" />
     <Content Include="Imagenes\Productos\1.jpg" />
     <Content Include="Imagenes\Productos\10.jpg" />
     <Content Include="Imagenes\Productos\11.jpg" />
