Añadido fondo y arreglos css para el fondo

--- a/Proyecto05ciclo.csproj
+++ b/Proyecto05ciclo.csproj
@@ -1929,6 +1929,7 @@
     <Content Include="Content\Plugins\font-awesome-free\webfonts\fa-solid-900.svg" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="Imagenes\gametec\fondo.png" />
     <Content Include="Imagenes\Icono\favicon.ico" />
     <Content Include="Imagenes\Login\1.jpg" />
     <Content Include="Imagenes\Login\2.jpg" />
